feat: fixing finally docker build steps
